feat(personal-categories): support backend icons and colors
